@@ -19,6 +19,7 @@ Now
  * GP
    - Change output format.
    - Rewrite criteria.
+   - Reduce optimization's steps.
 
 Version 0.0.6 2013-07-19
  * VM
